<resources>
    <!-- App name -->
    <string name="app_name">Geocaching</string>

    <!-- Found page -->
    <string name="found">Found</string>

    <!-- Map page -->
    <string name="map">Map</string>

    <!-- Settings page -->
    <string name="settings">Settings</string>
    <string name="yes_no_section_title">Yes/No Multi</string>
    <string name="yes_no_title">Yes/No</string>
    <string name="yes_no_description">Yes or No</string>
    <string name="multi_title">Multi</string>
    <string name="multi_dialog_title">Dialog</string>
    <string name="multi_dialog_default">One</string>

</resources>
