<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:title="@string/yes_no_section_title"
        android:key="yes_no_multi_settings">
        <CheckBoxPreference
            android:key="yes_no"
            android:title="@string/yes_no_title"
            android:summary="@string/yes_no_description"
            android:defaultValue="false" />
        <ListPreference
            android:dependency="yes_no"
            android:key="multiple_choice"
            android:title="@string/multi_title"
            android:dialogTitle="@string/multi_dialog_title"
            android:entries="@array/settings_multi_options"
            android:entryValues="@array/settings_multi_values"
            android:defaultValue="@string/multi_dialog_default" />
    </PreferenceCategory>
</PreferenceScreen>